tests/parser/error/definition_many_error.st
def 2 := 3

def a := 34

def b := _

def c := 6

def x : 2 := 3

