tests/parser/error/definition_many_error.out
tests/parser/error/definition_many_error.st:1:5
1 | def 2 := 3
        ^
Error: Expected identifier.

tests/parser/error/definition_many_error.st:5:10
5 | def b := _
             ^
Error: Expected expression.

tests/parser/error/definition_many_error.st:9:7
9 | def x : 2 := 3
            ^
Error: Expected type.
